# mosaic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-all.txt  requirements.txt  setup.cfg
.github/workflows/: publish.yml  tests.yml
docs/: architecture.md  cli-reference.md  code-review-issues.md  getting-started.md  nodes-reference.md  pipeline-guide.md  plugin-development.md  tts-backend-guide.md  tts-guide.md  video-models.md
docs/api/: README.md
docs/api/audio/: README.md
docs/api/consistency/: README.md
docs/api/core/: Merge.md  Pipeline.md  _ConditionalNode.md
docs/api/digital_human/: README.md
docs/api/export/: Livestreamer.md  MultiFormatExporter.md  README.md  VideoEncoder.md
docs/api/image/: BackgroundRemover.md  ImageToImage.md  Inpainting.md  README.md  Stylizer.md  TextToImage.md  Upscaler.md
docs/api/rag/: README.md
docs/api/subtitle/: README.md
docs/api/text/: README.md
docs/api/video/: FrameExtractor.md  FrameInterpolator.md  HunyuanVideo.md  ImageToVideo.md  LTXVideo.md  README.md  TextToVideo.md  VideoContinuation.md  WanVideo.md
examples/: 01_text_domain.py  02_image_domain.py  03_video_domain.py  04_audio_domain.py  05_tts_chattts.py  06_tts_fish_speech.py  07_tts_gpt_sovits.py  08_tts_cosyvoice.py  09_subtitle_rag.py  10_digital_human.py  11_cross_domain_pipeline.py
mosaic/: __init__.py
mosaic/backends/: __init__.py
mosaic/cli/: __init__.py  create_node.py  doctor.py  main.py
mosaic/core/: __init__.py  _device_utils.py  async_pipeline.py  branch.py  context.py  device_utils.py  env.py  events.py  model_cache.py  node.py  onnx_utils.py  pipeline.py  plugin.py  registry.py  result.py  scheduler.py  task.py  task_manager.py  types.py
mosaic/nodes/: __init__.py  _coerce.py  _model_loader.py  _pipeline_utils.py  coerce.py
mosaic/nodes/audio/: __init__.py  _base.py  _ref_audio_utils.py  asr.py  music_generator.py  sound_effect.py  tts.py  voice_clone.py
mosaic/nodes/consistency/: __init__.py  _base.py  cross_frame_consistency.py  identity_keeper.py  style_keeper.py
mosaic/nodes/digital_human/: __init__.py  _base.py  avatar_driver.py  lip_syncer.py  motion_generator.py  realtime_renderer.py
mosaic/nodes/export/: __init__.py  livestream.py  multi_format_exporter.py  video_encoder.py
mosaic/nodes/image/: __init__.py  _base.py  _image_utils.py  background_remover.py  image_to_image.py  inpainting.py  stylizer.py  text_to_image.py  upscaler.py
mosaic/nodes/rag/: __init__.py  _base.py  citation_generator.py  retriever.py  (+2 more)
mosaic/templates/: __init__.py  init.py.j2  node.py.j2  node.py.tpl  readme.md.j2  test.py.tpl
mosaic/utils/: __init__.py
scripts/: build_and_publish.sh  generate_api_docs.py  run_all_tests.sh  verify_release.sh
tests/: conftest.py
tests/final/: ACCEPTANCE_REPORT.md  __init__.py  conftest.py  test_async_pipeline.py  test_cli.py  test_documentation_consistency.py  test_error_handling.py  test_full_node_coverage.py  test_node_interface_compliance.py  test_performance_baseline.py  test_pipeline_composition.py  test_plugin_system.py  test_scheduler_stress.py  test_serialization.py  test_streaming.py  test_tts_backends_compliance.py  test_weight_converter.py
tests/phase1/: README.md  __init__.py  conftest.py  test_events.py  test_integration.py  test_node.py  test_pipeline.py  test_registry.py  test_scheduler.py  test_text_nodes.py  test_types.py
tests/phase2/: README.md  __init__.py  conftest.py  test_background_remover.py  test_image_base.py  test_image_to_image.py  test_image_types.py  test_inpainting.py  test_integration.py  test_intermediate.py  test_pipeline_parallel.py  test_pipeline_result.py  test_stylizer.py  test_text_to_image.py  test_upscaler.py
tests/phase3/: README.md  __init__.py  conftest.py  test_asr.py  test_audio_base.py  test_audio_types.py  test_integration.py  test_music_generator.py  test_sound_effect.py  test_subtitle_aligner.py  test_subtitle_base.py  test_subtitle_generator.py  test_subtitle_translator.py  test_subtitle_types.py  test_tts.py  test_voice_clone.py
tests/phase4/: README.md  conftest.py  test_async_pipeline.py  test_async_task.py  test_frame_extractor.py  test_frame_interpolation.py  test_hunyuan_video.py  test_image_to_video.py  test_integration.py  test_livestream.py  test_ltx_video.py  test_multi_format_export.py  test_task_manager.py  test_text_to_video.py  test_video_base.py  test_video_continuation.py  test_video_encoder.py  test_video_types.py  test_wan_video.py
tests/phase5/: README.md  conftest.py  test_citation_generator.py  test_document_parser.py  test_integration.py  test_rag_base.py  test_rag_pipeline.py  test_rag_types.py  test_retriever.py  test_vector_indexer.py
tests/phase6/: README.md  __init__.py  conftest.py  test_consistency_base.py  test_consistency_pipeline.py  test_consistency_types.py  test_cross_frame_consistency.py  test_identity_keeper.py  test_integration.py  test_style_keeper.py
tests/phase7/: README.md  __init__.py  conftest.py  test_avatar_driver.py  test_digital_human_base.py  test_digital_human_pipeline.py  test_digital_human_types.py  test_integration.py  test_lip_syncer.py  test_motion_generator.py  test_realtime_renderer.py
tests/tts/: README.md  conftest.py  test_all_backends_regression.py  test_chat_fish_regression.py  test_chat_tokenizer.py  test_chattts_backend.py  test_chattts_weight_converter.py  test_cosyvoice_backend.py  test_cosyvoice_tokenizer.py  test_cosyvoice_weight_converter.py  test_dvae.py  test_fish_ar.py  test_fish_backend.py  test_fish_tokenizer.py  test_fish_weight_converter.py  test_flow_architecture.py  test_flow_matching.py  test_flow_matching_numerics.py  test_flow_numerics.py  test_four_backends_regression.py  test_gpt2_ar.py  test_hifi_gan.py  test_llama_ar.py  test_sovits_backend.py  test_sovits_decoder.py  test_sovits_gpt_regression.py  test_sovits_tokenizer.py  test_sovits_weight_converter.py  test_speaker_encoder.py  test_speech_tokenizer.py  test_streaming_comparison.py  test_tts_framework.py  test_vocos.py  test_vq_decoder.py
(+67 files in other folders)
