[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic"
version = "0.1.0"
description = "A modular, composable generative AI framework for multimodal content creation powered by Transformers and Diffusers."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "[Your Name]", email = "you@example.com" },
]
keywords = [
    "multimodal",
    "generative-ai",
    "transformers",
    "diffusers",
    "text-to-image",
    "text-to-video",
    "text-to-audio",
    "digital-human",
    "rag",
    "deep-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # PyTorch: 2.x 系列，<3.0 防止未来大版本破坏
    "torch>=2.0.0,<3.0.0",
    # Transformers: 4.x 系列。v5.0 有重大破坏性变更
    # (apply_chat_template 返回类型变更、encode_plus 移除等)，
    # 项目代码基于 4.x API 编写，暂不兼容 5.x
    "transformers>=4.36.0,<5.0.0",
    # Diffusers: 0.27+ 引入所需 Pipeline；<0.41 因为 0.40 废弃了
    # enable_vae_slicing (已兼容处理)，更高版本可能有更多破坏性变更
    "diffusers>=0.27.0,<0.41.0",
    # Pillow: 图像处理基础库
    "Pillow>=10.0.0,<14.0.0",
    # NumPy: 1.24+ 支持。
    # <2.0 因为 NumPy 2.0 有破坏性 C-API 变更，
    # 且 torch<2.2 不兼容 numpy 2.0。
    # 待 torch 下限提升到 2.2+ 后可放宽到 <3.0
    "numpy>=1.24.0,<2.0.0",
    # Accelerate: device_map="auto" 和 enable_model_cpu_offload 所需
    "accelerate>=0.20.0,<2.0.0",
]

[project.optional-dependencies]
# ONNX Runtime 有两个互斥的 PyPI 包：
#   onnxruntime       — 仅 CPU
#   onnxruntime-gpu   — GPU (CUDA)，包含 CPU 功能
# 两者不能同时安装。用户根据硬件选择其一。
# 参考: https://onnxruntime.ai/docs/get-started/with-python.html
onnx = [
    # ONNX Runtime CPU 版本（帧插值 RIFE / 数字人推理）
    "onnxruntime>=1.16.0,<2.0.0",
]
onnx-gpu = [
    # ONNX Runtime GPU 版本（CUDA 12.x），包含 CPU 功能
    # 安装前请确保未安装 onnxruntime（CPU 版本）
    "onnxruntime-gpu>=1.16.0,<2.0.0",
]
video = [
    "imageio>=2.31.0,<3.0.0",
    "imageio-ffmpeg>=0.4.9,<1.0.0",
    # 帧插值 (RIFE) 需要 ONNX Runtime，
    # 请额外安装 mosaic[onnx] (CPU) 或 mosaic[onnx-gpu] (GPU)
]
audio = [
    "soundfile>=0.12.0,<1.0.0",
    "librosa>=0.10.0,<1.0.0",
    # edge-tts: 微软 Azure TTS，免费、支持多语言和情感风格，无需 GPU
    "edge-tts>=6.1.0,<8.0.0",
]
export = [
    # 视频编码与推流需要 FFmpeg
    "imageio-ffmpeg>=0.4.9,<1.0.0",
    # 音频导出需要 soundfile
    "soundfile>=0.12.0,<1.0.0",
]
rag = [
    "faiss-cpu>=1.7.4,<2.0.0",
    # ChromaDB 1.0 有重大破坏性变更 (Rust 重写、API 重构)，
    # 项目代码基于 0.x API 编写
    "chromadb>=0.4.0,<1.0.0",
    # 文档解析库
    "pdfplumber>=0.10.0,<1.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    # 嵌入模型
    "sentence-transformers>=2.2.0,<4.0.0",
]
digital-human = [
    # 数字人推理需要 ONNX Runtime，
    # 请额外安装 mosaic[onnx] (CPU) 或 mosaic[onnx-gpu] (GPU)
    "trimesh>=3.23.0,<5.0.0",
    # 人脸检测与特征提取（数字人域 _detect_face / _extract_face_embedding 使用）
    # insightface 是可选依赖，缺失时自动回退到中心裁剪
    "insightface>=0.7.3,<1.0.0",
]
consistency = [
    # 人脸检测（IdentityKeeper 的 _prepare_face_region 使用）
    # insightface 是可选依赖，缺失时自动回退到中心裁剪
    "insightface>=0.7.3,<1.0.0",
    # 图像相似度计算（_compute_image_similarity 使用）
    # scikit-image 是可选依赖，缺失时自动回退到归一化互相关
    "scikit-image>=0.21.0,<1.0.0",
]
dev = [
    "pytest>=7.4.0,<10.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.7.0,<3.0.0",
]
# all 组默认使用 CPU 版本的 ONNX Runtime。
# GPU 用户请安装 mosaic[all,onnx-gpu] 并手动卸载 onnxruntime:
#   pip uninstall onnxruntime && pip install mosaic[all,onnx-gpu]
all = [
    "mosaic[onnx,video,audio,export,rag,digital-human,consistency,dev]",
]

[project.urls]
Homepage = "https://github.com/your-org/mosaic"
Repository = "https://github.com/your-org/mosaic.git"
Documentation = "https://mosaic.readthedocs.io"
Issues = "https://github.com/your-org/mosaic/issues"

[project.scripts]
mosaic = "mosaic.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mosaic*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]