[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic"
version = "0.1.0"
description = "A modular, composable generative AI framework for multimodal content creation powered by Transformers and Diffusers."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Mosaic Contributors" },
]
keywords = [
    "multimodal",
    "generative-ai",
    "transformers",
    "diffusers",
    "text-to-image",
    "text-to-video",
    "text-to-audio",
    "digital-human",
    "rag",
    "deep-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # PyTorch: >=2.2.0 以兼容 numpy 2.x；<3.0 防止未来大版本破坏
    "torch>=2.2.0,<3.0.0",
    # Torchvision: 图像预处理（BackgroundRemover 的 transforms 需要）
    # 与 torch 同版本线，但允许 patch 版本独立
    "torchvision>=0.17.0,<1.0.0",
    # Transformers: >=4.51.0 保证 dtype= 参数支持（torch_dtype= 已弃用）；
    # <5.0.0 避免 v5 与 chromadb/sentence-transformers 的依赖冲突
    "transformers>=4.51.0,<5.0.0",
    # Diffusers: >=0.33.1 保证弃用 Pipeline 类的迁移支持；
    # 0.38+ 推荐 DiffusionPipeline 自动检测替代具体 Pipeline 类
    "diffusers>=0.33.1,<1.0.0",
    # Safetensors: diffusers 0.38 要求 >=0.8.0-rc.0
    "safetensors>=0.8.0,<1.0.0",
    # HuggingFace Hub: diffusers 0.38 要求 >=0.34.0
    "huggingface-hub>=0.34.0,<2.0.0",
    # PyYAML: CLI 管道文件解析（mosaic run --pipeline xxx.yaml）和
    # HFModelManager 的 config 读写
    "PyYAML>=6.0,<7.0",
    # SentencePiece: T5 tokenizer 的必需后端（CogVideoX、AudioLDM2 等
    # 使用 T5 的 Pipeline 缺少此库时，transformers 返回 Placeholder 类
    # 而非抛 ImportError，导致 diffusers 报 "cannot be loaded" 错误）
    "sentencepiece>=0.1.99",
    # Pillow: 图像处理基础库，>=10.0.0 保证所需 API
    "Pillow>=10.0.0,<16.0.0",
    # NumPy: >=1.24.0 保证所需 API；<3.0.0 防止未来大版本破坏。
    # torch>=2.2.0 已兼容 numpy 2.x，故允许 numpy 2.x
    "numpy>=1.24.0,<3.0.0",
    # Accelerate: diffusers 0.38 要求 >=0.31.0
    "accelerate>=0.31.0,<2.0.0",
]

[project.optional-dependencies]
# ONNX Runtime（互斥，二选一）
#   pip install -e ".[onnx]"        # CPU
#   pip install -e ".[onnx-gpu]"    # GPU (CUDA)
onnx = [
    "onnxruntime>=1.16.0,<2.0.0",
]
onnx-gpu = [
    "onnxruntime-gpu>=1.16.0,<2.0.0",
]
# 媒体处理（视频读写、音频处理、导出、数字人、一致性）
media = [
    "imageio>=2.31.0,<3.0.0",
    "imageio-ffmpeg>=0.4.9,<1.0.0",
    "soundfile>=0.12.0,<1.0.0",
    "librosa>=0.10.0,<1.0.0",
    "edge-tts>=6.1.0,<8.0.0",
    "trimesh>=3.23.0,<5.0.0",
    "insightface>=0.7.3,<1.0.0",
    "scikit-image>=0.21.0,<1.0.0",
]
# RAG（检索增强生成）
rag = [
    "faiss-cpu>=1.7.4,<2.0.0",
    "chromadb>=0.4.0,<1.0.0",
    "pdfplumber>=0.10.0,<1.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "sentence-transformers>=2.2.0,<4.0.0",
]
# 开发工具
dev = [
    "pytest>=7.4.0,<10.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.7.0,<3.0.0",
]
# 全量安装（默认 CPU ONNX；GPU 用户用 all,onnx-gpu）
all = [
    "mosaic[onnx,media,rag,dev]",
]

[project.urls]
Homepage = "https://github.com/your-org/mosaic"
Repository = "https://github.com/your-org/mosaic.git"
Documentation = "https://mosaic.readthedocs.io"
Issues = "https://github.com/your-org/mosaic/issues"

[project.scripts]
mosaic = "mosaic.cli.main:main"

# 节点插件 entry_points 组。
# 内置节点通过 registry.discover() 自动注册，无需在此声明。
# 第三方插件包可通过此组注册自定义节点，例如:
#
# [project.entry-points."mosaic.nodes"]
# my-custom-node = "my_package.nodes:MyCustomNode"

[tool.setuptools.packages.find]
where = ["."]
include = ["mosaic*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]